/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.8/userguide/building_java_projects.html in the Gradle documentation.
 */
plugins {
  // Apply the application plugin to add support for building a CLI application in Java.
  id 'application'
}

repositories {
  mavenCentral()
}

dependencies {
  implementation "org.mozilla:rhino-all:1.8.0"
  implementation 'commons-cli:commons-cli:1.9.0'
  implementation "org.apache.commons:commons-lang3:3.15.0"
}

// Apply a specific Java toolchain to ease working on different environments.
java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

ext.jarName = 'bhruntimelib.jar'
ext.USR_HOME = System.getProperty('user.home')
ext.JDK_VER = 21
ext.appDirName = 'App';
ext.ps = File.pathSeparator
ext.fs = File.separator
ext.projName = 'BhRuntime'
ext.jarLibName = 'Jlib'

ext.bhUtilityJarName = 'bhutility.jar'

application {
  // Define the main class for the application.
  mainClass = 'net.seapanda.bunnyhop.runtime.AppMain'
}

// ライブラリの準備
task prepareLibs(type: Copy) {
  from configurations.runtimeClasspath
  into "$projectDir/../$appDirName/$jarLibName"

  doFirst {
    delete "$projectDir/../$appDirName/$jarLibName"
  }

  doLast {
    ant.copy(todir: "$projectDir/../$appDirName/$jarLibName") {
      fileset(dir: "$projectDir/../lib", includes: "$bhUtilityJarName")
    }
  }
}


sourceSets {
  main {
    java {
      srcDir "$projectDir/../src/main/java"
    }
  }
}


compileJava {
  classpath += fileTree("$projectDir/../$appDirName/$jarLibName") { include "*.jar" }
  options.incremental = true
  options.fork = true
  options.failOnError = true
  options.forkOptions.executable = USR_HOME + '/java/' + JDK_VER + '/jdk/bin/javac.exe'
}


task createJar(type: Exec) {
  dependsOn 'compileJava'

  doFirst {
    commandLine (
      (USR_HOME + '/java/' + JDK_VER +'/jdk/bin/jar'),
      '--create',
      '--file', "$projectDir/../$appDirName/$jarLibName/${jarName}",
      '--main-class', application.mainClass.get(),
      '-C', "$projectDir/build/classes/java/main", '.')
  }
}


task runApp(type: Exec) {
  dependsOn 'createJar'

  doFirst {
    commandLine (
      (USR_HOME + '/java/' + JDK_VER +'/jdk/bin/java'),
      '-cp', ("$projectDir/../$appDirName/$jarLibName/*"),
      application.mainClass.get())
  }
}

task jlink(type: Exec) {
  dependsOn 'createJar'

  doFirst {
    // カスタムJRE作成
    delete "$projectDir/../$projName"
    commandLine (
      (USR_HOME + '/java/' + JDK_VER + '/jdk/bin/jlink'),
      '--add-modules', 'ALL-MODULE-PATH',
      '--module-path', (USR_HOME + '/java/arm/' + JDK_VER + '/jdk/jmods'),
      // '--compress=2',
      '--output', "$projectDir/../$projName")
  }

  doLast {
    ant.mkdir(dir:"$projectDir/../$projName/$appDirName")
    ant.mkdir(dir:"$projectDir/../$projName/$appDirName/Compiled")
    ant.mkdir(dir:"$projectDir/../$projName/$appDirName/Log")
    ant.mkdir(dir:"$projectDir/../$projName/$appDirName/UserData/Text")
    ant.mkdir(dir:"$projectDir/../$projName/$appDirName/UserData/Audio")
    ant.copy(todir: "$projectDir/../$projName/$appDirName") {
      fileset(dir: "$projectDir/../$appDirName")
    }
    delete fileTree("$projectDir/../$projName/$appDirName/Compiled"){}
    delete fileTree("$projectDir/../$projName/$appDirName/Log"){}
  }
}
